Modify classes and add description text

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,19 +1,23 @@
 <div class="services">
     <div class="services__item">
         <img src="assets/images/design_images/design-service.jpg" alt="#">
-        <p class="services__item-text">Diseño web</p>
+        <p class="services__item-title">Diseño web</p>
+        <p class="services__item-description">Creación de sitios web atractivos y funcionales que reflejan la identidad de tu marca y cautivan a los visitantes.</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/text-service.jpg" alt="#">
-        <p class="services__item-text">Textos profesionales</p>
+        <p class="services__item-title">Textos profesionales</p>
+        <p class="services__item-description">Generación de textos persuasivos y de alta calidad para comunicar tu mensaje de manera clara y efectiva.</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/redesign-service.jpg" alt="#">
-        <p class="services__item-text">Rediseño y Mantenimiento</p>
+        <p class="services__item-title">Rediseño y Mantenimiento</p>
+        <p class="services__item-description">Transformación y actualización de tu sitio web existente para brindar una imagen moderna y un rendimiento óptimo.</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/seo-service.jpg" alt="#">
-        <p class="services__item-text">SEO y Análisis</p>
+        <p class="services__item-title">SEO y Análisis</p>
+        <p class="services__item-description">Implementación de estrategias de SEO, investigación de palabras clave y análisis detallados para mejorar tu visibilidad y relevancia en la web.</p>
     </div>
     <a class="custom-header__button" href="proyectos">Ver proyectos</a>
 </div>
