--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -430,6 +430,7 @@ article {
   top: -165px;
   margin-top: 20px;
   justify-content: center;
+  font-size: 15px;
 }
 
 .services {
@@ -448,21 +449,21 @@ article {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: 35px 20px;
   box-sizing: border-box;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.03);
   border-radius: 20px;
   overflow: hidden;
   border: 2px solid #ffffff;
-  max-height: 500px;
+  max-height: 850px;
   text-align: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .services__item img,
 .projects__item img {
-  height: 87%;
   width: 100%;
+  height: 70vh;
   object-fit: cover;
   object-position: top;
   border-radius: 20px;
@@ -472,16 +473,32 @@ article {
   object-position: center;
 }
 
-.services__item-text,
-.projects__item-text {
-  font-weight: 700;
-  font-size: 1.5em;
-  margin-bottom: 0;
+.projects__item a {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #1e1e1e;
+  width: 100%;
+}
+
+.services__item p{
   padding: 0.2em 0.5em;
 }
 
-.projects__item-text {
-  font-size: 1em;
+.projects__item a:hover > img, p{
+  opacity: 0.90;
+}
+
+.services__item-title,
+.projects__item-title {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 0.2em auto;
+}
+
+.services__item-description, .projects__item-description {
+  font-size: 1.2em;
 }
 
 .text-banner {
@@ -629,10 +646,12 @@ article {
   resize: none;
 }
 
-.contact__form input, .contact__form textarea[name="message"] {
+.contact__form input,
+.contact__form textarea[name="message"] {
   font-size: 0.7em;
   padding: 0.2em 0.5em;
 }
+
 /** Success-Message Page **/
 
 .success-message__img {
@@ -758,13 +777,8 @@ article {
     margin: 20px 10px;
   }
 
-  .services__item {
-    max-height: 33vh;
-  }
-
   .projects__item {
     width: 100%;
-    max-height: 60vh;
   }
 
   .about__img {
