--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -690,6 +690,8 @@ p {
   height: 600px;
   object-fit: cover;
   object-position: top right;
+  padding: 1em;
+  box-sizing: border-box;
 }
 
 .post-list {
