--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -463,10 +463,10 @@ article {
 
 .services__item img,
 .projects__item img {
-  width: 100%;
-  height: 70vh;
-  object-fit: cover;
-  object-position: top;
+  width: 100%!important;
+  height: 70vh!important;
+  object-fit: cover!important;
+  object-position: top!important;
   border-radius: 20px;
 }
 
