--- a/_includes/custom_header.html
+++ b/_includes/custom_header.html
@@ -1,4 +1,5 @@
 <div class="custom-header">
+  <img class="custom-header__background" src="assets/images/design_images/header-img.jpg"/>
   <div class="custom-header__main-text">
     <p>
       <span class="custom-header__main-text--regular">Potencia tu</span><span
