--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -356,7 +356,8 @@ article {
 }
 
 .custom-header {
-  background: linear-gradient(45deg, #c1590063, transparent), url("images/design_images/header-img.jpg");
+  /*background: linear-gradient(45deg, #c1590063, transparent), url("images/design_images/header-img.jpg");*/
+  background: #dd9725;
   height: 90vh;
   width: 100%;
   color: #ffffff;
@@ -373,6 +374,13 @@ article {
   top: -85px;
   z-index: auto;
   align-items: center;
+}
+
+.custom-header__background {
+  position: absolute;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .custom-header__main-text {
